service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appserver-service
spec:
  selector:
    app: appserver
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP
