ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appserver-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appserver-service
                port:
                  number: 8081
